--- a/booi-pooka-vibes/package.json
+++ b/booi-pooka-vibes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-hart-key",
+  "name": "booi-pooka-vibes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
+    "daisyui": "^5.0.22",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0",
-    "sort-by": "^0.0.2"
+    "react-router-dom": "^7.5.0",
+    "sort-by": "^0.0.2",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
