--- a/booi-pooka-vibes/package.json
+++ b/booi-pooka-vibes/package.json
@@ -17,6 +17,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.5",
     "sort-by": "^0.0.2",
     "tailwindcss": "^4.1.4"
   },
