--- a/tailwind-react-pricing-option/package.json
+++ b/tailwind-react-pricing-option/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "recharts": "^3.5.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
